Laboratorium 3: praca domowa: Dodanie wyglądu strony tworzenia nowego zadania

--- a/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/index.html
+++ b/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/index.html
@@ -16,11 +16,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=M+PLUS+1:wght@100&family=Quicksand&display=swap" rel="stylesheet">
+    
 </head>
 <!-- Wygląd strony -->
 <body>
     <!-- Główna sekcja strony-->
-    <section id="main-section">
+    <section class="main-section">
         <!-- Nagłówek sekcji -->
         <header>Lista zadań</header>
         <!-- Kontener z przyciskiem i wyszukiwarką zadań-->
