Laboratorium 3: praca domowa: Dodanie stylów okna kreatora, poprawa wyglądu głównego okna

--- a/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/index.html
+++ b/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/index.html
@@ -32,21 +32,21 @@
             <datalist>
             </datalist>
             <!-- Przycisk oznaczający dane zadanie jako wykonane-->
-            <button type="button" class="normal button">Wykonane</button>
+            <button type="button" class="edit button">Edytuj</button>
            
         </div>
         <div>
             <!-- Przycisk otwierający okno kalendarza-->
-            <button type="button" class="normal button">Kalendarz</button>
+            <button type="button" class="normal button">Szczegóły</button>
             <!-- Przycisk dodający nowe zadanie-->
             <button type="button" class="normal button" >Dodaj</button>
         </div>
          <!-- Lista przechowująca zadania i przyciski-->
         <ul>
             <li id="task">
-            <span class="task-text">Kup coś<br /><span class="task-date">29.01.2021 19:56</span></span>
+            <span class="task-text">Kup coś</span>
             <!-- Przycisk edytujący zadanie-->
-            <button type="button" class="edit button ">Edytuj</button>
+            <button type="button" class="small-normal button ">Wykonane</button>
             <!-- Przycisk usuwający zadanie-->
             <button type="button" class="delete button">Usuń</button>
             </li>
