--- a/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/pages/new-task-creator-page.html
+++ b/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/pages/new-task-creator-page.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <link href="../styles/styles.css" rel="stylesheet" type="text/css" />
+    <link href="../styles/creator-page-styles.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=M+PLUS+1:wght@100&family=Quicksand&family=Roboto:wght@300&display=swap" rel="stylesheet">
