Laboratorium 3: praca domowa: Poprawa błędu w działaniu przycisku Usuń

--- a/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/pages/new-task-creator-page.html
+++ b/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/pages/new-task-creator-page.html
@@ -52,7 +52,7 @@
         </div>
 
         <!-- Kontener z przyciskami -->
-        <div>
+        <div id="button-container">
             <!-- Przycisk cofający do strony głównej -->
             <button type="button" id="back-to-main-page" class="normal button">Cofnij</button>
             <!-- Przycisk potwierdzający wprowadzone dane -->
