Laboratorium 3: praca domowa: Dodanie wyglądu, styli, skryptu do strony wyświętlającej szczegółowe dane

--- a/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/index.html
+++ b/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/index.html
@@ -36,7 +36,7 @@
         </div>
         <div>
             <!-- Przycisk otwierający okno kalendarza-->
-            <button type="button" class="normal button">Szczegóły</button>
+            <button id="open-detailed-view" type="button" class="normal button">Szczegóły</button>
             <!-- Przycisk otwierający okno kreatora nowego zadania-->
             <button id="open-creator-page" type="button" class="normal button">Dodaj</button>
         </div>
