Laboratorium 3: praca domowa: Dodanie napisu wyświetlającego się po dodaniu nowego zadania

--- a/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/pages/new-task-creator-page.html
+++ b/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/pages/new-task-creator-page.html
@@ -59,7 +59,9 @@
             <button type="button" id="confirm-values" class="normal button">Dodaj</button>
         </div>
 </section>
-    
+    <!-- Kontener z napisem potwierdzającym-->
+    <div id="confirm-label-container">
+    </div>
     <!-- Dołączenie skryptu-->
     <script type="text/javascript" src="../scripts/creatorEditScript.js"></script>
     <script>Start();</script>
